Move slider up more and move tabs down to prevent overlap

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -308,7 +308,7 @@ header.masthead {
     display: flex;
     justify-content: center;
     padding: 0px 20px 0px; // Removed bottom padding to move slider up more
-    margin-top: -50px; // Move slider up by 50px
+    margin-top: -80px; // Move slider up by 80px (increased from 50px)
   }
 
   // Research Tabs Container (now below slider)
@@ -316,7 +316,7 @@ header.masthead {
     display: flex;
     justify-content: center;
     padding: 0px 20px 90px; // Removed top padding to bring tabs closer
-    margin-top: -30px; // Move tabs up by 30px (same relative distance)
+    margin-top: 30px; // Positive margin to move tabs down away from slider
   }
 
   // Image Slider Styles with Liquid Glass effect - Perfect border wrapping
@@ -447,12 +447,12 @@ header.masthead {
     
     .image-slider-container {
       padding: 0px 10px 0px; // Removed all vertical padding for mobile
-      margin-top: -30px; // Move slider up on mobile
+      margin-top: -50px; // Move slider up more on mobile (increased from -30px)
     }
 
     .research-tabs-container {
       padding: 0px 10px 90px; // Removed top padding for mobile
-      margin-top: -20px; // Move tabs up on mobile
+      margin-top: 20px; // Positive margin to move tabs down on mobile
     }
 
     .image-slider {
